unpackaged/main/default/objects/User/fields/Adobe_G2_Name_Tag__c.field-meta.xml
<CustomField>
    <fullName>Adobe_G2_Name_Tag__c</fullName>
    <description>This is a field to populate the full name of (Signer 3/Guarantor 2) to prepopulate the full of a customer in a signature field.</description>
    <formula>'{{S3Full_es_:signer3:fullname}}'</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adobe G2 Name Tag</label>
    <type>Text</type>
</CustomField>