unpackaged/main/default/objects/User/fields/Adobe_G2_Sig_Ref_Tag__c.field-meta.xml
<CustomField>
    <fullName>Adobe_G2_Sig_Ref_Tag__c</fullName>
    <description>This field will contain a reference to the Shortened Tag that is placed in a document for Adobe eSign (Signature Guarantor 2)</description>
    <formula>'{{#s3=Sig_es_:signer3:signature}}'</formula>
    <inlineHelpText>This field will contain a reference to the Shortened Tag that is placed in a document for Adobe eSign (Signature Guarantor 2)</inlineHelpText>
    <label>Adobe G2 Sig Ref Tag</label>
    <type>Text</type>
</CustomField>