unpackaged/main/default/objects/User/fields/Adobe_G3_Int_Ref_Tag__c.field-meta.xml
<CustomField>
    <fullName>Adobe_G3_Int_Ref_Tag__c</fullName>
    <description>This field will contain a reference to the Shortened Tag that is placed in a document for Adobe eSign (Initials Guarantor 3)</description>
    <formula>'{{#i4=Int_es_:signer4:initials}}'</formula>
    <inlineHelpText>This field will contain a reference to the Shortened Tag that is placed in a document for Adobe eSign (Initials Guarantor 3)</inlineHelpText>
    <label>Adobe G3 Int Ref Tag</label>
    <type>Text</type>
</CustomField>