unpackaged/main/default/objects/User/fields/Adobe_G3_Name_Tag__c.field-meta.xml
<CustomField>
    <fullName>Adobe_G3_Name_Tag__c</fullName>
    <description>This is a field to populate the full name of (Signer 4/Guarantor 3) to prepopulate the full of a customer in a signature field.</description>
    <formula>'{{S4Full_es_:signer4:fullname}}'</formula>
    <label>Adobe G3 Name Tag</label>
    <type>Text</type>
</CustomField>