unpackaged/main/default/objects/User/fields/Adobe_G3_Sig_Ref_Tag__c.field-meta.xml
<CustomField>
    <fullName>Adobe_G3_Sig_Ref_Tag__c</fullName>
    <description>This field will contain a reference to the Shortened Tag that is placed in a document for Adobe eSign (Signature Guarantor 3)</description>
    <formula>'{{#s4=Sig_es_:signer4:signature}}'</formula>
    <inlineHelpText>This field will contain a reference to the Shortened Tag that is placed in a document for Adobe eSign (Signature Guarantor 3)</inlineHelpText>
    <label>Adobe G3 Sig Ref Tag</label>
    <type>Text</type>
</CustomField>