unpackaged/main/default/objects/User/fields/Adobe_G4_Int_Ref_Tag__c.field-meta.xml
<CustomField>
    <fullName>Adobe_G4_Int_Ref_Tag__c</fullName>
    <description>This field will contain a reference to the Shortened Tag that is placed in a document for Adobe eSign (Initials Guarantor 4)</description>
    <formula>'{{#i5=Int_es_:signer5:initials}}'</formula>
    <inlineHelpText>This field will contain a reference to the Shortened Tag that is placed in a document for Adobe eSign (Initials Guarantor 4)</inlineHelpText>
    <label>Adobe G4 Int Ref Tag</label>
    <type>Text</type>
</CustomField>