unpackaged/main/default/objects/User/fields/Adobe_G4_Name_Tag__c.field-meta.xml
<CustomField>
    <fullName>Adobe_G4_Name_Tag__c</fullName>
    <description>This is a field to populate the full name of (Signer 5/Guarantor 4) to prepopulate the full of a customer in a signature field.</description>
    <formula>'{{S5Full_es_:signer5:fullname}}'</formula>
    <label>Adobe G4 Name Tag</label>
    <type>Text</type>
</CustomField>