unpackaged/main/default/objects/User/fields/Adobe_Remove_Page__c.field-meta.xml
<CustomField>
    <fullName>Adobe_Remove_Page__c</fullName>
    <description>This field will contain a reference to the Adobe Tag that will remove a page with Text Tag references on it.</description>
    <formula>'{{#REMOVE_PAGE_FROM_OUTPUT}}'</formula>
    <inlineHelpText>This field will contain a reference to the Adobe Tag that will remove a page with Text Tag references on it.</inlineHelpText>
    <label>Adobe Remove Page</label>
    <type>Text</type>
</CustomField>