unpackaged/main/default/objects/User/fields/Adobe_Signor_Int_Ref_Tag__c.field-meta.xml
<CustomField>
    <fullName>Adobe_Signor_Int_Ref_Tag__c</fullName>
    <description>This field will contain a reference to the Shortened Tag that is placed in a document for Adobe eSign (Initials Signor)</description>
    <formula>'{{#i2=Int_es_:signer2:initials}}'</formula>
    <inlineHelpText>This field will contain a reference to the Shortened Tag that is placed in a document for Adobe eSign (Initials Signor)</inlineHelpText>
    <label>Adobe Signor Int Ref Tag</label>
    <type>Text</type>
</CustomField>