unpackaged/main/default/objects/User/fields/Auto_Assign_Number__c.field-meta.xml
<CustomField>
    <fullName>Auto_Assign_Number__c</fullName>
    <label>Auto Assign Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>