unpackaged/main/default/objects/User/fields/Available_Brands__c.field-meta.xml
<CustomField>
    <fullName>Available_Brands__c</fullName>
    <description>Introduced as part of the Quick Bridge to National Funding migration project to capture which brands this user works for. Originally all users will have one available brand but this is being created as a multi select picklist with the possibility that reps can work under multiple brands in the future.</description>
    <inlineHelpText>Which brand does this user work under?</inlineHelpText>
    <label>Available Brands</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>National Funding</fullName>
                <default>true</default>
                <label>National Funding</label>
            </value>
            <value>
                <fullName>Quick Bridge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>