unpackaged/main/default/objects/User/fields/CaseSafe_User_Id__c.field-meta.xml
<CustomField>
    <fullName>CaseSafe_User_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>CaseSafe User Id</label>
    <type>Text</type>
</CustomField>