unpackaged/main/default/objects/User/fields/Equipment_Signing_Authority__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Signing_Authority__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field will record the signing authority of each Equipment Analyst.  This will be used to determine if the analyst has signing authority on a transaction or needs manager approval.</description>
    <inlineHelpText>This field will record the signing authority of each Equipment Analyst.  This will be used to determine if the analyst has signing authority on a transaction or needs manager approval.</inlineHelpText>
    <label>Equipment Signing Authority</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>