unpackaged/main/default/objects/User/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <description>This field is been used in the Lead_Autopopulation_New_Override &amp; Lead Autopopulation.</description>
    <formula>FirstName+' '+ LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>