unpackaged/main/default/objects/User/fields/Leadership__c.field-meta.xml
<CustomField>
    <fullName>Leadership__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to make this user appear as the as the department head on the Phone List.</inlineHelpText>
    <label>Leadership</label>
    <type>Checkbox</type>
</CustomField>