unpackaged/main/default/objects/User/fields/Ownership_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Transfer__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If a lead or account is pulled up via Card Search and this box is checked for the original owner of that lead, the lead will be automatically transferred to the searching user.</inlineHelpText>
    <label>Card Search Ownership Transfer</label>
    <type>Checkbox</type>
</CustomField>