unpackaged/main/default/objects/User/fields/Partner_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account_Id__c</fullName>
    <description>User Contact -&gt; Contact -&gt; Account Id</description>
    <formula>Contact.Account.AccountID18__c</formula>
    <inlineHelpText>User Contact -&gt; Contact -&gt; Account Id</inlineHelpText>
    <label>Partner Account Id</label>
    <type>Text</type>
</CustomField>