unpackaged/main/default/objects/User/fields/Partner_Id__c.field-meta.xml
<CustomField>
    <fullName>Partner_Id__c</fullName>
    <label>Partner Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>