unpackaged/main/default/objects/User/fields/Product_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Product_Eligibility__c</fullName>
    <description>This field will indicate what products a rep can sell.</description>
    <inlineHelpText>This field will indicate what products a rep can sell.</inlineHelpText>
    <label>Product Eligibility</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lease</fullName>
            </value>
            <value>
                <fullName>Merchant Processing</fullName>
            </value>
            <value>
                <fullName>Working Capital</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>