unpackaged/main/default/objects/User/fields/Sales_Class__c.field-meta.xml
<CustomField>
    <fullName>Sales_Class__c</fullName>
    <description>This field will indicate what class a sales rep was part of.</description>
    <inlineHelpText>This field will indicate what class a sales rep was part of.</inlineHelpText>
    <label>Sales Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>April 2012</fullName>
            </value>
            <value>
                <fullName>October 2012</fullName>
            </value>
            <value>
                <fullName>January 2013</fullName>
            </value>
            <value>
                <fullName>March 2013</fullName>
            </value>
            <value>
                <fullName>May 2013 - WC</fullName>
            </value>
            <value>
                <fullName>May 2013 - MP</fullName>
            </value>
            <value>
                <fullName>June 2013</fullName>
            </value>
            <value>
                <fullName>September 2013 - WC</fullName>
            </value>
            <value>
                <fullName>September 2013 - Lease</fullName>
            </value>
            <value>
                <fullName>January 2014 - WC</fullName>
            </value>
            <value>
                <fullName>January 2014 - Lease</fullName>
            </value>
            <value>
                <fullName>April 2014 - Working Capital</fullName>
            </value>
            <value>
                <fullName>May 2014 - Lease</fullName>
            </value>
            <value>
                <fullName>July 2014 - Working Capital</fullName>
            </value>
            <value>
                <fullName>January 2015 - Working Capital</fullName>
            </value>
            <value>
                <fullName>April 2015 - Working Capital</fullName>
            </value>
            <value>
                <fullName>June 2015 - Working Capital</fullName>
            </value>
            <value>
                <fullName>September 2015 - Working Capital</fullName>
            </value>
            <value>
                <fullName>January 2016 - Working Capital</fullName>
            </value>
            <value>
                <fullName>April 2016 - Working Capital</fullName>
            </value>
            <value>
                <fullName>June 2016 - Working Capital</fullName>
            </value>
            <value>
                <fullName>September 2016 - Working Capital</fullName>
            </value>
            <value>
                <fullName>January 2017 - Working Capital</fullName>
            </value>
            <value>
                <fullName>April 2017 - Working Capital</fullName>
            </value>
            <value>
                <fullName>June 2017 - Working Capital</fullName>
            </value>
            <value>
                <fullName>August 2017 - Working Capital</fullName>
            </value>
            <value>
                <fullName>September 2017 - Working Capital</fullName>
            </value>
            <value>
                <fullName>January 2018 - Working Capital</fullName>
            </value>
            <value>
                <fullName>April 2018 - Working Capital</fullName>
            </value>
            <value>
                <fullName>July 2018 - Working Capital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>