unpackaged/main/default/objects/User/fields/Sales_Leadership__c.field-meta.xml
<CustomField>
    <fullName>Sales_Leadership__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Leadership</label>
    <type>Checkbox</type>
</CustomField>