unpackaged/main/default/objects/User/fields/SF_User_TrackIT_Request__c.field-meta.xml
<CustomField>
    <fullName>SF_User_TrackIT_Request__c</fullName>
    <description>Refers to the TrackIt ticket that requested the new user in Salesforce.</description>
    <inlineHelpText>Refers to the TrackIt ticket that requested the new user in Salesforce.</inlineHelpText>
    <label>SF User TrackIT Request</label>
    <length>10</length>
    <type>Text</type>
</CustomField>