unpackaged/main/default/objects/User/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <description>Field on Manager users to define which team they are manager of. Used in Round Robin Internet Auto Assign flows.</description>
    <inlineHelpText>Field on Manager users to define which team they are manager of. Used in Round Robin Internet Auto Assign flows.</inlineHelpText>
    <label>Team</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internet Mailer Team</fullName>
            </value>
            <value>
                <fullName>Mailer Team</fullName>
            </value>
            <value>
                <fullName>PPC Team</fullName>
            </value>
            <value>
                <fullName>Senior Team</fullName>
            </value>
            <value>
                <fullName>Training Team</fullName>
            </value>
            <value>
                <fullName>Digital Team</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Syndication</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Renewals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>