unpackaged/main/default/objects/User/fields/Team_Assignment_Date__c.field-meta.xml
<CustomField>
    <fullName>Team_Assignment_Date__c</fullName>
    <label>Team Assignment Date</label>
    <type>Date</type>
</CustomField>