unpackaged/main/default/objects/User/fields/Track_Collections_Twilio_Messages__c.field-meta.xml
<CustomField>
    <fullName>Track_Collections_Twilio_Messages__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox for Collections View All VF page to get twilio messages to/from this user.</description>
    <inlineHelpText>Check to include user's Twilio messages in Collections View All VF page</inlineHelpText>
    <label>Track Collections Twilio Messages</label>
    <type>Checkbox</type>
</CustomField>