unpackaged/main/default/objects/User/fields/User_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Developer_Name__c</fullName>
    <description>Unique name for user that can be used across orgs for workflow rules other automated tasks. Should not contain spaces.</description>
    <inlineHelpText>Unique name for user that can be used across orgs for workflow rules other automated tasks. Should not contain spaces.</inlineHelpText>
    <label>User Developer Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>