unpackaged/main/default/objects/User/fields/Vendor_Key__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Key__c</fullName>
    <description>This field will be used in the process to update leads in the handoff from our telemarketing vendor to our internal sales rep.</description>
    <inlineHelpText>This field will be used in the process to update leads in the handoff from our telemarketing vendor to our internal sales rep.</inlineHelpText>
    <label>Vendor Key</label>
    <length>150</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>