unpackaged/main/default/objects/User/fields/WC_Approval_Authority__c.field-meta.xml
<CustomField>
    <fullName>WC_Approval_Authority__c</fullName>
    <defaultValue>0</defaultValue>
    <label>WC Approval Authority</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>