unpackaged/main/default/objects/User/fields/WC_Funding_Signing_Authority__c.field-meta.xml
<CustomField>
    <fullName>WC_Funding_Signing_Authority__c</fullName>
    <defaultValue>0</defaultValue>
    <label>WC Funding Signing Authority</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>