unpackaged/main/default/objects/User/validationRules/User_developer_name_cant_contain_spaces.validationRule-meta.xml
<ValidationRule>
    <fullName>User_developer_name_cant_contain_spaces</fullName>
    <active>true</active>
    <description>Prohibits a value in the User Developer Name field from being saved if there are blank spaces.</description>
    <errorConditionFormula>NOT(
REGEX(User_Developer_Name__c,"([a-zA-Z_])*")
)</errorConditionFormula>
    <errorDisplayField>User_Developer_Name__c</errorDisplayField>
    <errorMessage>User Developer Name cannot contain blank spaces</errorMessage>
</ValidationRule>